Update build weasis